--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,13 @@ _modules/*
 *.sublime-workspace
 *.sublime-project
 .phpintel
-/api/
+
+# API
+api/__pycache__/
+api/venv/
+api/.env
+api/*.pyc
+api/*.pt
 
 # Visual Studio Code
 .vscode/
